--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
-<!-- Hotjar Tracking Code for https://moises-mg.github.io/2dawtest/ -->
+<!-- Hotjar Tracking Code for https://moises-mg.github.io/2DAWTest/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
